# movax01h-cpp-practice

./: .gitignore  .travis.yml  CMakeLists.txt  README.adoc  README.md
01-elementary/01-temperature/: CMakeLists.txt  README.adoc
01-elementary/01-temperature/src/: main.cc  main.cpp  temperature.cc  temperature.h  temperature_unittest.cpp
01-elementary/02-blocks/: CMakeLists.txt  README.adoc
01-elementary/02-blocks/src/: blocks.cc  blocks.cpp  blocks.h  blocks_unittest.cc  main.cpp
01-elementary/03-tuples-and-pairs/: CMakeLists.txt  README.adoc
01-elementary/03-tuples-and-pairs/src/: main.cpp  utils.cc  utils.cpp  utils.h  utils_unittest.cpp
01-elementary/04-task-tracker/: CMakeLists.txt  README.adoc
01-elementary/04-task-tracker/src/: task_tracker.cc  task_tracker.h  task_tracker_unittests.cc
01-elementary/07-iterators/: CMakeLists.txt  README.adoc
01-elementary/07-iterators/src/: main.cc  main_unittests.cc
